# Aki

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.aki/: permissions.yaml
.aki/personality/: active.json
aki/: .gitignore  __init__.py
aki/agent/: __init__.py  agent_registry.py  base.py  identity.py  logger.py  orchestrator.py  roles.py  state.py  task_registry.py
aki/api/: __init__.py  models.py  routes.py  server.py  session_manager.py
aki/cli/: __init__.py  events.py  focus.py  input.py  main.py  renderer.py
aki/config/: __init__.py  settings.py
aki/context/: __init__.py  budget.py  manager.py  strategies.py  token_counter.py
aki/gateway/: __init__.py  compaction.py  gateway.py  lane_queue.py  permissions.py  persistence.py  types.py
aki/hooks/: __init__.py  engine.py  permission.py  rules.py  types.py
aki/mcp/: __init__.py  config.py
aki/memory/: __init__.py  base.py  manager.py  migration.py  recall.py  review.py  shared.py  types.py
aki/models/: __init__.py  base.py  config.py  registry.py
aki/personality/: __init__.py  _schema.md  base.md  registry.py
aki/resilience/: __init__.py  backoff.py  failover.py  recovery.py
aki/runtime/: __init__.py  dependencies.py
aki/skills/: __init__.py  registry.py
aki/tools/: __init__.py  base.py  delegate_to_worker.py  executor.py  read_skill.py  registry.py  result_store.py  skills_search.py
docs/: agent_role_policy.md  architecture.md  discord-setup.md  memory_architecture.md  skill_subtitle_translation_example.md
scripts/: test_universal_agent.py
tests/: __init__.py  conftest.py  test_audio_extract_tool.py  test_audio_vad_tool.py  test_cli_subtitle_pipeline.py  test_cli_subtitle_save.py  test_gateway.py  test_integration.py  test_mcp_config.py  test_mcp_integration.py  test_memory_management.py  test_memory_migration.py  test_memory_tools.py  test_qwen_provider.py  test_skill_orchestration_fallback.py  test_subtitle_e2e_qwen.py  test_subtitle_tools.py  test_transcribe_audio_preprocess.py
(+113 files in other folders)
